# to_do_fastapi

./: pyproject.toml
migrations/: env.py
migrations/versions/: 7ee40bfbeb19_criando_tabela_de_users.py  fe1adc7b49a8_criando_campo_updated_at.py
tests/: test_app.py
to_do_list/: app.py  security.py  settings.py
to_do_list/db/: connection.py  models.py
to_do_list/routes/: auth.py  user.py
to_do_list/schemas/: base.py  user.py
to_do_list/tests/: conftest.py  test_app.py  test_security.py
to_do_list/tests/models/: user.py
to_do_list/tests/routes/: test_user.py
